@startuml

title __GUI's Class Diagram__\n

  package com.dekinci.eden {
    package com.dekinci.eden.gui {
      class GameController {
          ~ worldPane : Pane
          ~ mapCanvas : Canvas
          - graphicsContext : GraphicsContext
          ~ minimapCanvas : Canvas
          ~ tickButton : Button
          ~ autotickButton : ToggleButton
          ~ viewCoordinate : Label
          ~ viewBlockId : Label
          ~ viewChunkId : Label
          ~ viewEntitiesList : ListView<Animal>
          ~ tickLabel : Label
          - tileRes : int
          - tileScale : double
          - clickTimer : Timer
          - mouseX : double
          - mouseY : double
          - isUp : boolean
          - isDown : boolean
          - isRight : boolean
          - isLeft : boolean
          + initialize()
          - calculateCurrentCoordinate()
          - fireTick()
          - updateEffect()
          - handlePressed()
          - handleReleased()
          - move()
          - zoom()
          - resizeAndDraw()
          - resize()
          - clear()
          - draw()
          - drawAll()
          - drawTile()
          - drawCell()
          - toMenu()
          - getHue()
          - getSaturation()
          - getBrightness()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.gui {
      class MainMenuController {
          ~ createButton : Button
          + initialize()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.gui {
      class MapGenController {
          ~ worldPane : StackPane
          ~ generate : Button
          ~ saveButton : Button
          ~ startButton : Button
          ~ sizeSlider : Slider
          ~ thresholdSlider : Slider
          ~ powerSlider : Slider
          ~ distanceCSlider : Slider
          ~ sizeLabel : Label
          ~ thresholdLabel : Label
          ~ powerLabel : Label
          ~ distanceLabel : Label
          ~ minimapCanvas : Canvas
          - fSize : String
          - fThresh : String
          - fPow : String
          - fDist : String
          - tileRes : int
          - tileScale : double
          ~ mapCanvas : Canvas
          - graphicsContext : GraphicsContext
          - isUp : boolean
          - isDown : boolean
          - isRight : boolean
          - isLeft : boolean
          + initialize()
          - backToMenu()
          - zoom()
          - resizeAndDraw()
          - resize()
          - bindLabelAndSlider()
          - handlePressed()
          - handleReleased()
          - move()
          - showMap()
          - clear()
          - draw()
          - drawTile()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.gui {
      class GenerationHandler {
          - worldSizeInChunks : int
          - minimap : BufferedImage
          - genLabel : Label
          + onPreExecute()
          + doInBackground()
          + onPostExecute()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.gui {
      class SaveHandler {
          + onPreExecute()
          + doInBackground()
          + onPostExecute()
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.gui {
      class TextureManager {
          {static} + TILE_RES : int
          {static} - textures : Map<Byte, Image>
          {static} - animalTextures : Map<Byte, Image>
          {static} + get()
          {static} + getAnimal()
          {static} - animalFileById()
          {static} - speciesById()
          {static} - fileById()
          {static} - nameById()
      }
    }
  }
  

  GameController o-- Game : game
  GameController o-- WorldMap : worldMap
  GameController o-- AnimalManager : animalManager
  GameController o-- Coordinate : activeCoordinate
  GameController o-- Coordinate : center
  MapGenController o-- WorldMap : worldMap
  MapGenController o-- Coordinate : center
  MapGenController +-down- GenerationHandler
  MapGenController +-down- SaveHandler
  GenerationHandler -up-|> AsyncTask
  SaveHandler -up-|> AsyncTask


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
